RESOLVED FIXED264863
[TextureMapper] BitmapTexurePool doesn't need to be heap allocated
https://bugs.webkit.org/show_bug.cgi?id=264863
Summary [TextureMapper] BitmapTexurePool doesn't need to be heap allocated
Carlos Garcia Campos
Reported 2023-11-14 22:25:22 PST
.
Attachments
Carlos Garcia Campos
Comment 1 2023-11-14 22:27:56 PST
EWS
Comment 2 2023-11-15 00:22:53 PST
Committed 270758@main (db648b65929d): <https://commits.webkit.org/270758@main> Reviewed commits have been landed. Closing PR #20524 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-11-15 00:23:15 PST
Note You need to log in before you can comment on or make changes to this bug.