[TextureMapper] BitmapTexurePool doesn't need to be heap allocated https://bugs.webkit.org/show_bug.cgi?id=264863

Reviewed by Fujii Hironori.

* Source/WebCore/platform/graphics/texmap/BitmapTexturePool.cpp:
* Source/WebCore/platform/graphics/texmap/BitmapTexturePool.h:
* Source/WebCore/platform/graphics/texmap/TextureMapper.cpp:
(WebCore::TextureMapper::TextureMapper):
(WebCore::TextureMapper::acquireTextureFromPool):
(WebCore::TextureMapper::releaseUnusedTexturesNow):
(WebCore::TextureMapper::drawNumber):
(WebCore::TextureMapper::applyBlurFilter):
(WebCore::TextureMapper::applyDropShadowFilter):
(WebCore::TextureMapper::applySinglePassFilter):
* Source/WebCore/platform/graphics/texmap/TextureMapper.h:

Canonical link: https://commits.webkit.org/270758@main