Source/WebCore/platform/graphics/texmap/BitmapTexturePool.h
@@ -37,7 +37,6 @@ class IntSize;
 
 class BitmapTexturePool {
     WTF_MAKE_NONCOPYABLE(BitmapTexturePool);
-    WTF_MAKE_FAST_ALLOCATED;
 public:
     BitmapTexturePool();
 
